@@ -10,6 +10,9 @@ BUG FIXES
   o `tidy_source()` writes an extra space to the last line of code (thanks,
   @mr-karan, #49)
 
+  o long strings (> 1000 characters) in source code can be preserved now
+  (thanks, @jholtman, #50)
+
 		   CHANGES IN formatR VERSION 1.3
 
 NEW FEATURES
